--- a/4_test_cross_correlations/src/average_maps.Rmd
+++ b/4_test_cross_correlations/src/average_maps.Rmd
@@ -67,7 +67,8 @@ ggsave(plot = plot, filename = fname, width = 6, height = 5)
 channels <- as.character(c(1:128))
 
 get_inverted_list <- function(channels, list) {
-  inverted_list <- channels[!channels %in% list]
+  inverted_list <- channels[!channels %in% list] %>%
+    as.numeric()
   return(inverted_list)
 }
 
@@ -102,14 +103,14 @@ get_map <- function(df, channels, nodiff_channels, levels_label) {
                               colour = "#287D8EFF",
                               alpha = 0.5,
                               stroke = 0)) +
-    geom_point(data = diff_coordinates, aes(x = x, y = y,
-                                            size = 1,
-                                            alpha = 0.5,
-                                            stroke = 0)) +
-    geom_point(data = nodiff_coordinates, aes(x = 1000+x, y = y,
-                                              size = 1,
-                                              alpha = 0.5,
-                                              stroke = 0)) +
+    # geom_point(data = diff_coordinates, aes(x = x, y = y,
+    #                                         size = 1,
+    #                                         alpha = 0.5,
+    #                                         stroke = 0)) +
+    # geom_point(data = nodiff_coordinates, aes(x = 1000+x, y = y,
+    #                                           size = 1,
+    #                                           alpha = 0.5,
+    #                                           stroke = 0)) +
     scale_color_discrete(name = "Level", labels = levels_label) +
     scale_size_continuous(name = "p", 
                           limits = c(1, 1000),
@@ -221,28 +222,36 @@ ggsave(plot = plot, filename = fname, width = 12, height = 5)
 
 ```{r, echo = FALSE}
 print("number of overall tracking channels")
-sum(overall_w$p < 0.01)
+sum(overall_w$p < 0.05)
 
 print("number of talker norm channels")
 length(talker_channels)
-print("number of different-talker channels (p < 0.01)")
-sum(T_w$p < 0.01, na.rm = TRUE)
-print("number of same-talker channels (p < 0.01)")
-sum(S_w$p < 0.01, na.rm = TRUE)
+print("number of different-talker channels (p < 0.05)")
+sum(T_w$p < 0.05, na.rm = TRUE)
+print("number of talker norm channels that are different-talker channels (p < 0.05)")
+length(intersect(talker_channels, which(!is.na(different_talker) & different_talker <= 0.05)))
+print("number of talker norm channels that are same-talker channels (p < 0.05)")
+length(intersect(talker_channels, which(!is.na(same_talker) & same_talker <= 0.05)))
+print("number of same-talker channels (p < 0.05)")
+sum(S_w$p < 0.05, na.rm = TRUE)
 
 print("number of meaning channels")
 length(meaning_channels)
-print("number of meaningful channels (p < 0.01)")
-sum(M_w$p < 0.01, na.rm = TRUE)
-print("number of nonsense channels (p < 0.01)")
-sum(N_w$p < 0.01, na.rm = TRUE)
+print("number of meaning channels that tracking meaningful stimuli (p < 0.05)")
+length(intersect(meaning_channels, which(!is.na(meaningful) & meaningful <= 0.05)))
+print("number of meaning channels that tracking nonsense stimuli (p < 0.05)")
+length(intersect(meaning_channels, which(!is.na(nonsense) & nonsense <= 0.05)))
+print("number of meaningful channels (p < 0.05)")
+sum(M_w$p < 0.05, na.rm = TRUE)
+print("number of nonsense channels (p < 0.05)")
+sum(N_w$p < 0.05, na.rm = TRUE)
 
 print("number of constraint channels")
 length(constraint_channels)
-print("number of low-constraint channels (p < 0.01)")
-sum(L_w$p < 0.01, na.rm = TRUE)
-print("number of high-constraint channels (p < 0.01)")
-sum(H_w$p < 0.01, na.rm = TRUE)
+print("number of low-constraint channels (p < 0.05)")
+sum(L_w$p < 0.05, na.rm = TRUE)
+print("number of high-constraint channels (p < 0.05)")
+sum(H_w$p < 0.05, na.rm = TRUE)
 ```
 
 
@@ -345,29 +354,29 @@ ggsave(plot = plot, filename = fname, width = 12, height = 5)
 print("number of talker norm channels for low constraint")
 length(talker_L_interaction_channels)
 print("number of different-talker channels (p < 0.05)")
-sum(TL_w$p < 0.01, na.rm = TRUE)
+sum(TL_w$p < 0.05, na.rm = TRUE)
 print("number of same-talker channels (p < 0.05)")
-sum(SL_w$p < 0.01, na.rm = TRUE)
+sum(SL_w$p < 0.05, na.rm = TRUE)
 
 print("number of talker norm channels for high constraint")
 length(talker_H_interaction_channels)
-print("number of different-talker channels (p < 0.01)")
-sum(TH_w$p < 0.01, na.rm = TRUE)
-print("number of same-talker channels (p < 0.01)")
-sum(SH_w$p < 0.01, na.rm = TRUE)
+print("number of different-talker channels (p < 0.05)")
+sum(TH_w$p < 0.05, na.rm = TRUE)
+print("number of same-talker channels (p < 0.05)")
+sum(SH_w$p < 0.05, na.rm = TRUE)
 
 
 print("number of meaning channels for low constraint")
 length(meaning_L_interaction_channels)
-print("number of meaningful channels (p < 0.01)")
-sum(ML_w$p < 0.01, na.rm = TRUE)
-print("number of nonsense channels (p < 0.01)")
-sum(NL_w$p < 0.01, na.rm = TRUE)
+print("number of meaningful channels (p < 0.05)")
+sum(ML_w$p < 0.05, na.rm = TRUE)
+print("number of nonsense channels (p < 0.05)")
+sum(NL_w$p < 0.05, na.rm = TRUE)
 
 print("number of meaning channels for high constraint")
 length(meaning_H_interaction_channels)
-print("number of meaningful channels (p < 0.01)")
-sum(MH_w$p < 0.01, na.rm = TRUE)
-print("number of nonsense channels (p < 0.01)")
-sum(NH_w$p < 0.01, na.rm = TRUE)
+print("number of meaningful channels (p < 0.05)")
+sum(MH_w$p < 0.05, na.rm = TRUE)
+print("number of nonsense channels (p < 0.05)")
+sum(NH_w$p < 0.05, na.rm = TRUE)
 ```
