--- a/4_test_cross_correlations/src/average_maps.Rmd
+++ b/4_test_cross_correlations/src/average_maps.Rmd
@@ -18,9 +18,10 @@ source("4_test_cross_correlations/src/functions.R")
 
 # Param
 ALT = "two.sided"
+NORM = "" # either "normalized_" or ""
 
 # Import data
-fpath = paste("4_test_cross_correlations/data/", ALT, "_wilcoxon_results.RData", sep = "")
+fpath = paste("4_test_cross_correlations/data/", NORM, ALT, "_wilcoxon_results.RData", sep = "")
 load(fpath) 
 ```
 
@@ -57,7 +58,7 @@ plot <- ggplot() +
         panel.grid.minor=element_blank(),
         plot.background=element_blank())
 plot
-fname = paste('figs/', ALT, '_overall.png', sep = "")
+fname = paste('figs/', NORM, ALT, '_overall.png', sep = "")
 ggsave(plot = plot, filename = fname, width = 6, height = 5)
 ```
 
@@ -168,7 +169,7 @@ talker_df <- data.frame(group1 = same_talker, group2 = different_talker, nodiff_
 # Plot
 plot <- get_map(talker_df, talker_channels, nodiff_talker_channels, c("Different talker", "Same talker"))
 plot
-fname = paste('figs/', ALT, '_talker.png', sep = "")
+fname = paste('figs/', NORM, ALT, '_talker.png', sep = "")
 ggsave(plot = plot, filename = fname, width = 12, height = 5)
 ```
 
@@ -191,7 +192,7 @@ meaning_df <- data.frame(group1 = meaningful, group2 = nonsense, nodiff_group1 =
 # Plot
 plot <- get_map(meaning_df, meaning_channels, nodiff_meaning_channels, c("Nonsense", "Meaningful"))
 plot
-fname = paste('figs/', ALT, '_meaning.png', sep = "")
+fname = paste('figs/', NORM, ALT, '_meaning.png', sep = "")
 ggsave(plot = plot, filename = fname, width = 12, height = 5)
 ```
 
@@ -214,7 +215,7 @@ constraint_df <- data.frame(group1 = low, group2 = high, nodiff_group1 = nodiff_
 # Plot
 plot <- get_map(constraint_df, constraint_channels, nodiff_constraint, c("High constraint", "Low constraint"))
 plot
-fname = paste('figs/', ALT, '_constraint.png', sep = "")
+fname = paste('figs/', NORM, ALT, '_constraint.png', sep = "")
 ggsave(plot = plot, filename = fname, width = 12, height = 5)
 ```
 
@@ -276,7 +277,7 @@ talker_L_interaction_df <- data.frame(group1 = SL, group2 = TL, nodiff_group1 = 
 # Plot
 plot <- get_map(talker_L_interaction_df, talker_L_interaction_channels, nodiff_talker_L_interaction_channels, c("Different talker low constraint", "Same-talker low constraint"))
 plot
-fname = paste('figs/', ALT, '_talker_L.png', sep = "")
+fname = paste('figs/', NORM, ALT, '_talker_L.png', sep = "")
 ggsave(plot = plot, filename = fname, width = 12, height = 5)
 ```
 
@@ -298,7 +299,7 @@ talker_H_interaction_df <- data.frame(group1 = SH, group2 = TH, nodiff_group1 = 
 # Plot
 plot <- get_map(talker_H_interaction_df, talker_H_interaction_channels, nodiff_talker_H_interaction_channels, c("Different talker high constraint", "Same-talker high constraint"))
 plot
-fname = paste('figs/', ALT, '_talker_H.png', sep = "")
+fname = paste('figs/', NORM, ALT, '_talker_H.png', sep = "")
 ggsave(plot = plot, filename = fname, width = 12, height = 5)
 ```
 
@@ -321,7 +322,7 @@ meaning_L_interaction_df <- data.frame(group1 = ML, group2 = NL, nodiff_group1 =
 # Plot
 plot <- get_map(meaning_L_interaction_df, meaning_L_interaction_channels, nodiff_meaning_L_interaction_channels, c("Nonsense low constraint", "Meaningful low constraint"))
 plot
-fname = paste('figs/', ALT, '_meaning_L.png', sep = "")
+fname = paste('figs/', NORM, ALT, '_meaning_L.png', sep = "")
 ggsave(plot = plot, filename = fname, width = 12, height = 5)
 ```
 
@@ -344,7 +345,7 @@ meaning_H_interaction_df <- data.frame(group1 = MH, group2 = NH, nodiff_group1 =
 # Plot
 plot <- get_map(meaning_H_interaction_df, meaning_H_interaction_channels, nodiff_meaning_H_interaction_channels, c("Nonsense high constraint", "Meaningful high constraint"))
 plot
-fname = paste('figs/', ALT, '_meaning_H.png', sep = "")
+fname = paste('figs/', NORM, ALT, '_meaning_H.png', sep = "")
 ggsave(plot = plot, filename = fname, width = 12, height = 5)
 ```
 **stats**
