--- a/4_test_cross_correlations/src/average.Rmd
+++ b/4_test_cross_correlations/src/average.Rmd
@@ -26,7 +26,9 @@ NORM = "normalized_" # either "normalized_" or ""
 # Import data
 xcorr <- read.csv(file = paste("3_cross_correlate/data/", NORM, "average.csv", sep = ''))
 channels <- as.character(1:128)
-n <- 11
+subs <- as.character(unique(xcorr$subject_number))
+n <- length(subs)
+conds <- unique(c(xcorr$constraint, xcorr$meaning, xcorr$talker))
 ```
 
 #### One-sample t-tests for overall tracking
@@ -122,9 +124,13 @@ sum(H_w$p < 0.05)
 Compares cross correlations between the two levels of each condition. 
 
 ```{r}
-talker_w <- get_two_sample_wilcoxon_for_each_channel(S, T)
-meaning_w <- get_two_sample_wilcoxon_for_each_channel(M, N)
-constraint_w <- get_two_sample_wilcoxon_for_each_channel(L, H)
+talker_w <- get_two_sample_wilcoxon_for_each_channel(S, T, paired = TRUE)
+meaning_w <- get_two_sample_wilcoxon_for_each_channel(M, N, paired = TRUE)
+constraint_w <- get_two_sample_wilcoxon_for_each_channel(L, H, paired = TRUE)
+
+talker_w$w_adjusted <-standardize_ws(talker_w$p, talker_w$w)
+meaning_w$w_adjusted <-standardize_ws(meaning_w$p, meaning_w$w)
+constraint_w$w_adjusted <-standardize_ws(constraint_w$p, constraint_w$w)
 ```
 
 ```{r}
@@ -185,6 +191,20 @@ NH_w <- get_one_sample_wilcoxon_for_each_channel(NH, ALT)
 ```
 
 ```{r}
+# One-sample t-tests for talker
+SL_w$w_adjusted <-standardize_ws(SL_w$p, SL_w$w)
+SH_w$w_adjusted <-standardize_ws(SH_w$p, SH_w$w)
+TL_w$w_adjusted <-standardize_ws(TL_w$p, TL_w$w)
+TH_w$w_adjusted <-standardize_ws(TH_w$p, SH_w$w)
+
+# One-sample t-tests for meaning
+ML_w$w_adjusted <-standardize_ws(ML_w$p, ML_w$w)
+MH_w$w_adjusted <-standardize_ws(MH_w$p, MH_w$w)
+NL_w$w_adjusted <-standardize_ws(NL_w$p, NL_w$w)
+NH_w$w_adjusted <-standardize_ws(NH_w$p, NH_w$w)
+```
+
+```{r}
 # Creating a table to display all the p-values
 interaction_w <- data.frame(channels, 
                      'SL' = SL_w$p,
@@ -211,10 +231,15 @@ kable(map_df, escape = F, col.names = c("Channel", "L", "H", "L", "H", "L", "H",
 ```
 
 ```{r}
-talker_L_w <- get_two_sample_wilcoxon_for_each_channel(SL, TL)
-talker_H_w <- get_two_sample_wilcoxon_for_each_channel(SH, TH)
-meaning_L_w <- get_two_sample_wilcoxon_for_each_channel(ML, NL)
-meaning_H_w <- get_two_sample_wilcoxon_for_each_channel(MH, NH)
+talker_L_w <- get_two_sample_wilcoxon_for_each_channel(SL, TL, paired = TRUE)
+talker_H_w <- get_two_sample_wilcoxon_for_each_channel(SH, TH, paired = TRUE)
+meaning_L_w <- get_two_sample_wilcoxon_for_each_channel(ML, NL, paired = TRUE)
+meaning_H_w <- get_two_sample_wilcoxon_for_each_channel(MH, NH, paired = TRUE)
+
+talker_L_w$w_adjusted <-standardize_ws(talker_L_w$p, talker_L_w$w)
+talker_H_w$w_adjusted <-standardize_ws(talker_H_w$p, talker_H_w$w)
+meaning_L_w$w_adjusted <-standardize_ws(meaning_L_w$p, meaning_L_w$w)
+meaning_H_w$w_adjusted <-standardize_ws(meaning_H_w$p, meaning_H_w$w)
 ```
 
 ```{r}
@@ -291,6 +316,286 @@ kable(map_df, escape = F, col.names = c("Channel", "L", "H", "L", "H")) %>%
 #   kable_styling(bootstrap_options = c("hover", "condensed"), full_width = F)
 ```
 
+
+#### Plot test statistics
+
+```{r}
+# Plot p-values
+hist(S_w$p, ylim = c(0,40))
+hist(T_w$p, ylim = c(0,40))
+hist(M_w$p, ylim = c(0,40))
+hist(N_w$p, ylim = c(0,40))
+hist(L_w$p, ylim = c(0,40))
+hist(H_w$p, ylim = c(0,40))
+```
+
+```{r}
+# Plot test statistics
+standardize_ws <- function(p, w) {
+  i <- which(p == max(p))
+  mid <- w[i]
+  w_adjusted <- abs(w - mid)
+  return(w_adjusted)
+}
+
+get_critical_value <- function(p, w) {
+  c <- min(w[which(p < 0.05)])
+  return(c)
+}
+
+plot_ws <- function(w1, w2, labs, c, fname) {
+  df_long <- data.frame(w1 = unlist(w1), w2 = unlist(w2)) %>%
+    pivot_longer(cols = c("w1", "w2"),
+                 names_to = "condition",
+                 values_to = "W")
+  p <- ggplot(df_long, aes(x = W, fill = condition)) +
+    geom_histogram(position ="identity", alpha=0.65, bins = 15) +
+    geom_vline(xintercept = c) +
+    scale_fill_discrete(labels = labs) +
+    scale_color_discrete(labels = labs) +
+    ylim(c(0, 25)) +
+    xlim(c(0, 35))
+  ggsave(p, filename = fname, width = 6, height = 3.5)
+  return(p)
+}
+
+overall_w$w_adjusted <- standardize_ws(overall_w$p, overall_w$w)
+S_w$w_adjusted <- standardize_ws(S_w$p, S_w$w)
+T_w$w_adjusted <- standardize_ws(T_w$p, T_w$w)
+M_w$w_adjusted <- standardize_ws(M_w$p, M_w$w)
+N_w$w_adjusted <- standardize_ws(N_w$p, N_w$w)
+L_w$w_adjusted <- standardize_ws(L_w$p, L_w$w)
+H_w$w_adjusted <- standardize_ws(H_w$p, H_w$w)
+
+c <- get_critical_value(S_w$p, S_w$w_adjusted)
+
+plot_ws(S_w$w_adjusted, T_w$w_adjusted, c("S", "T"), c, "4_test_cross_correlations/figs/ws_talker.png")
+plot_ws(M_w$w_adjusted, N_w$w_adjusted, c("M", "N"), c, "4_test_cross_correlations/figs/ws_meaning.png")
+plot_ws(L_w$w_adjusted, H_w$w_adjusted, c("L", "H"), c, "4_test_cross_correlations/figs/ws_constraint.png")
+```
+
+```{r}
+p <- ggplot(overall_w, aes(x = w_adjusted)) +
+    geom_histogram(position ="identity", alpha=0.8, bins = 15) +
+    geom_vline(xintercept = c) +
+    scale_fill_discrete(labels = labs) +
+    scale_color_discrete(labels = labs) +
+    ylim(c(0, 25)) +
+    xlim(c(0, 35)) +
+    xlab("w")
+p 
+ggsave(filename = "../figs/ws_overall.png", plot = p, width = 6, height = 2.5)
+sum(overall_w$p < 0.05)
+```
+
+
+#### Plot cross correlations
+
+```{r}
+# Plot cross correlations for channels with significant cross correlations
+
+get_sig_xcorrs <- function(xcorr, p) { # get xcorrs from sig channels
+  sig_xcorr <- as.matrix(xcorr) %>%
+   .[, which(p < 0.05)] %>%
+    abs() %>%
+    rowMeans() %>% # colMeans() compares channels, rowMeans() compares subs
+    remove_outliers()
+  return(sig_xcorr)
+}
+
+get_sig_xcorrs_df <- function(cond, group, sig_xcorr) {
+  cond_col <- rep(cond, length(sig_xcorr))
+  group_col <- rep(group, length(sig_xcorr))
+  df <- data.frame(cond, sig_xcorr, group)
+}
+
+remove_outliers <- function(x) {
+  x <- x[!x %in% boxplot.stats(x)$out]
+  return(x)
+}
+
+S_sig <- get_sig_xcorrs(S, S_w$p)
+T_sig <- get_sig_xcorrs(T, T_w$p)
+M_sig <- get_sig_xcorrs(M, M_w$p)
+N_sig <- get_sig_xcorrs(N, N_w$p)
+L_sig <- get_sig_xcorrs(L, L_w$p)
+H_sig <- get_sig_xcorrs(H, H_w$p)
+
+df <- get_sig_xcorrs_df('S', 'talker', S_sig) %>%
+  rbind(get_sig_xcorrs_df('T', 'talker', T_sig)) %>%
+  rbind(get_sig_xcorrs_df('M', 'meaning', M_sig)) %>%
+  rbind(get_sig_xcorrs_df('N', 'meaning', N_sig)) %>%
+  rbind(get_sig_xcorrs_df('L', 'constraint', L_sig)) %>%
+  rbind(get_sig_xcorrs_df('H', 'constraint', H_sig))
+
+p <- ggplot(df, aes(x = cond, y = sig_xcorr, fill = group)) + 
+  geom_boxplot() +
+  scale_fill_brewer(palette="Greens") +
+  geom_signif(comparisons = list(c("S", "T"), c("M", "N")), map_signif_level = TRUE) +
+  ylab("cross correlations")
+p
+ggsave(p, filename = '../figs/xcorrs_for_sig_channels.png', width = 6, height = 3)
+```
+
+#### Get stats
+
+```{r}
+# one-sample t-test
+overall_sig <- get_sig_xcorrs(overall, overall_w$p)
+t.test(overall_sig)
+
+# t-tests between levels 
+t.test(T_sig, S_sig)
+t.test(M_sig, N_sig)
+t.test(L_sig, H_sig)
+```
+
+## Count the number of channels tracking each condition level
+
+```{r warning=FALSE}
+count_sig_chans <- function(xcorr, subs, ALT, talker = NaN, meaning = NaN, constraint = NaN) {
+  cond_xcorr <- subset(xcorr,  talker = talker, meaning = meaning, constraint = constraint)
+  counts <- c()
+  for (sub in subs) {
+    sub_xcorr <- cond_xcorr[cond_xcorr$subject_number == sub,]
+    ws <- get_one_sample_wilcoxon_for_each_channel(sub_xcorr, alt = ALT)
+    count <- sum(ws$p < 0.05)
+    counts <- c(counts, count)
+  }
+  counts <- remove_outliers(counts)
+  return(counts)
+}
+
+S_counts <- count_sig_chans(xcorr, subs, ALT, talker = "S")
+T_counts <- count_sig_chans(xcorr, subs, ALT, talker = "T")
+M_counts <- count_sig_chans(xcorr, subs, ALT, meaning = "M")
+N_counts <- count_sig_chans(xcorr, subs, ALT, meaning = "N")
+L_counts <- count_sig_chans(xcorr, subs, ALT, constraint = "L")
+H_counts <- count_sig_chans(xcorr, subs, ALT, constraint = "H")
+```
+
+```{r warning=FALSE}
+overall_counts <- count_sig_chans(xcorr, subs, ALT)
+t.test(overall_counts)
+```
+
+
+#### Get stats
+
+```{r}
+# For talker
+print(paste("Mean channel counts for same-talker: ", round(mean(S_counts), 3), sep = ''))
+print(paste("sd: ", round(sd(S_counts), 3), sep = ''))
+print(paste("Mean channel counts for different-talker: ", round(mean(T_counts), 3), sep = ''))
+print(paste("sd: ", round(sd(T_counts), 3), sep = ''))
+t.test(S_counts, T_counts)
+
+# For meaning
+print(paste("Mean channel counts for meaningful sentences: ", round(mean(M_counts), 3), sep = ''))
+print(paste("sd: ", round(sd(M_counts), 3), sep = ''))
+print(paste("Mean channel counts for nonsense sentences: ", round(mean(N_counts), 3), sep = ''))
+print(paste("sd: ", round(sd(N_counts), 3), sep = ''))
+t.test(M_counts, N_counts)
+
+# For constraint
+print(paste("Mean channel counts for low constraint sentences: ", round(mean(L_counts), 3), sep = ''))
+print(paste("sd: ", round(sd(L_counts), 3), sep = ''))
+print(paste("Mean channel counts for high constraint sentences: ", round(mean(H_counts), 3), sep = ''))
+print(paste("sd: ", round(sd(H_counts), 3), sep = ''))
+t.test(L_counts, H_counts)
+```
+
+#### Plot
+
+```{r}
+df <- data.frame(cond = rep('S', length(S_counts)), group = rep('talker', length(S_counts)), counts = S_counts) %>%
+  rbind(data.frame(cond = rep('T', length(T_counts)), group = rep('talker', length(T_counts)), counts = T_counts)) %>%
+  rbind(data.frame(cond = rep('M', length(M_counts)), group = rep('meaning', length(M_counts)), counts = M_counts)) %>%
+  rbind(data.frame(cond = rep('N', length(N_counts)), group = rep('meaning', length(N_counts)), counts = N_counts)) %>%
+  rbind(data.frame(cond = rep('L', length(L_counts)), group = rep('constraint', length(L_counts)), counts = L_counts)) %>%
+  rbind(data.frame(cond = rep('H', length(H_counts)), group = rep('constraint', length(H_counts)), counts = H_counts))
+
+p <- ggplot(df, aes(x = cond, y = counts, fill = group)) + 
+  geom_boxplot() +
+  scale_fill_brewer(palette="Blues") +
+  geom_signif(comparisons = list(c("S", "T")), map_signif_level = TRUE) +
+  ylab("channels")
+p
+ggsave(p, filename = '../figs/compare_channel_counts.png', width = 6, height = 3)
+```
+## Count the number of channels tracking each condition
+
+```{r warning=FALSE}
+# Count the number of channels tracking each condition for each subject
+
+count_sig_chans_two_samp <- function(xcorr, subs, cond) {
+  if (cond == "talker" ) {
+    cond_xcorr_1 <- subset(xcorr,  talker = "S")
+    cond_xcorr_2 <- subset(xcorr,  talker = "T")
+  } else if (cond == "meaning" ) {
+    cond_xcorr_1 <- subset(xcorr,  meaning = "M")
+    cond_xcorr_2 <- subset(xcorr,  meaning = "N")
+  } else if (cond == "constraint") {
+    cond_xcorr_1 <- subset(xcorr,  constraint = "L")
+    cond_xcorr_2 <- subset(xcorr,  constraint = "H")
+  }
+
+  counts <- c()
+  for (sub in subs) {
+    if (sub == '302') {
+      next
+    }
+    print(sub)
+    sub_xcorr_1 <- cond_xcorr_1[cond_xcorr_1$subject_number == sub,]
+    sub_xcorr_2 <- cond_xcorr_2[cond_xcorr_1$subject_number == sub,]
+    ws <- get_two_sample_wilcoxon_for_each_channel(sub_xcorr_1, sub_xcorr_2, paired = FALSE)
+    count <- sum(ws$p < 0.05, na.rm = TRUE)
+    print(count)
+    counts <- c(counts, count)
+  }
+  counts <- remove_outliers(counts)
+  return(counts)
+}
+
+talker_counts <- count_sig_chans_two_samp(xcorr, subs, "talker")
+meaning_counts <- count_sig_chans_two_samp(xcorr, subs, "meaning")
+constraint_counts <- count_sig_chans_two_samp(xcorr, subs, "constraint")
+
+save(talker_counts, meaning_counts, constraint_counts, file = '../data/cond_channel_counts.RData')
+```
+
+#### Get stats
+
+```{r}
+df <- data.frame(cond = rep('talker', length(talker_counts)), counts = talker_counts) %>%
+  rbind(data.frame(cond = rep('meaning', length(meaning_counts)), counts = meaning_counts)) %>%
+  rbind(data.frame(cond = rep('constraint', length(constraint_counts)), counts = constraint_counts))
+
+print(paste("Mean channel counts for talker: ", round(mean(talker_counts), 3), sep = ''))
+print(paste("sd: ", round(sd(talker_counts), 3), sep = ''))
+print(paste("Mean channel counts for meaning: ", round(mean(meaning_counts), 3), sep = ''))
+print(paste("sd: ", round(sd(meaning_counts), 3), sep = ''))
+print(paste("Mean channel counts for constraint: ", round(mean(constraint_counts), 3), sep = ''))
+print(paste("sd: ", round(sd(constraint_counts), 3), sep = ''))
+
+fit <- aov(counts ~ cond, data = df)
+summary(fit)
+TukeyHSD(fit)
+```
+
+#### Plot
+
+```{r}
+p <- ggplot(df, aes(x = cond, y = counts, fill = cond)) +
+  geom_boxplot() +
+  scale_fill_brewer(palette="Blues") +
+  geom_signif(comparisons = list(c("talker", "constraint")), 
+                                 map_signif_level = TRUE,
+                                 annotations = c("*")) +
+  ylab("channels")
+p
+ggsave(p, filename = '../figs/compare_condition_channel_counts.png', width = 6, height = 3)
+```
 #### Save everything
 
 ```{r}
@@ -320,147 +625,3 @@ save(overall_w,
      NL_w, 
      file = fname)
 ```
-
-
-#### Plot test statistics
-
-```{r}
-# Plot p-values
-hist(S_w$p, ylim = c(0,40))
-hist(T_w$p, ylim = c(0,40))
-hist(M_w$p, ylim = c(0,40))
-hist(N_w$p, ylim = c(0,40))
-hist(L_w$p, ylim = c(0,40))
-hist(H_w$p, ylim = c(0,40))
-```
-
-```{r}
-# Plot test statistics
-invert_ws <- function(p, w) {
-  i <- which(p == max(p))
-  mid <- w[i]
-  w_adjusted <- abs(w - mid)
-  return(w_adjusted)
-}
-
-get_critical_value <- function(p, w) {
-  c <- min(w[which(p < 0.05)])
-  return(c)
-}
-
-plot_ws <- function(w1, w2, labs, c, fname) {
-  df_long <- data.frame(w1 = unlist(w1), w2 = unlist(w2)) %>%
-    pivot_longer(cols = c("w1", "w2"),
-                 names_to = "condition",
-                 values_to = "W")
-  p <- ggplot(df_long, aes(x = W, fill = condition, color = condition)) +
-    geom_histogram(position ="identity", alpha=0.5, bins = 15) +
-    geom_vline(xintercept = c) +
-    scale_fill_discrete(labels = labs) +
-    scale_color_discrete(labels = labs)
-  ggsave(p, filename = fname, width = 6, height = 3.5)
-  return(p)
-}
-
-S_w$w_adjusted <- invert_ws(S_w$p, S_w$w)
-T_w$w_adjusted <- invert_ws(T_w$p, T_w$w)
-M_w$w_adjusted <- invert_ws(M_w$p, M_w$w)
-N_w$w_adjusted <- invert_ws(N_w$p, N_w$w)
-L_w$w_adjusted <- invert_ws(L_w$p, L_w$w)
-H_w$w_adjusted <- invert_ws(H_w$p, H_w$w)
-
-c <- get_critical_value(S_w$p, S_w$w_adjusted)
-
-plot_ws(S_w$w_adjusted, T_w$w_adjusted, c("S", "T"), c, "4_test_cross_correlations/figs/ws_talker.png")
-plot_ws(M_w$w_adjusted, N_w$w_adjusted, c("M", "N"), c, "4_test_cross_correlations/figs/ws_meaning.png")
-plot_ws(L_w$w_adjusted, H_w$w_adjusted, c("L", "H"), c, "4_test_cross_correlations/figs/ws_constraint.png")
-```
-
-#### Plot cross correlations
-
-```{r}
-# Plot cross correlations for channels with significant cross correlations
-
-get_sig_xcorrs <- function(cond, group, xcorr, p) { # get xcorrs from sig channels
-  sig_xcorrs <- as.matrix(xcorr) %>%
-   .[, which(p < 0.05)] %>% 
-    abs() %>%
-    rowMeans() %>% # comparing channels, rowMeans() compares sub
-    remove_outliers()
-  cond_col <- rep(cond, length(sig_xcorrs))
-  group_col <- rep(group, length(sig_xcorrs))
-  df <- data.frame(cond, xcorrs = sig_xcorrs, group)
-  return(df)
-}
-
-remove_outliers <- function(x) {
-  x <- x[!x %in% boxplot.stats(x)$out]
-  return(x)
-}
-
-# get_sig_xcorr_stats <- function(cond, group, xcorr, p) {
-#   sig_xcorrs <- get_sig_xcorrs(cond, xcorr, p)$xcorrs
-#   print(sig_xcorrs)
-#   xcorr <- mean(sig_xcorrs)
-#   sd <- sd(sig_xcorrs)
-#   return(data.frame('condition' = cond,
-#                     'group' = group,
-#                     'xcorr' = xcorr,
-#                     'sd' = sd))
-# }
-
-# df <- get_sig_xcorr_stats('S', 'talker', S, S_w$p) %>%
-#   rbind(get_sig_xcorr_stats('T', 'talker', T, T_w$p)) %>%
-#   rbind(get_sig_xcorr_stats('M', 'meaning', M, M_w$p)) %>%
-#   rbind(get_sig_xcorr_stats('N', 'meaning', N, N_w$p)) %>%
-#   rbind(get_sig_xcorr_stats('L', 'constraint', L, L_w$p)) %>%
-#   rbind(get_sig_xcorr_stats('H', 'constraint', H, H_w$p))
-
-
-df <- get_sig_xcorrs('S', 'talker', S, S_w$p) %>%
-  rbind(get_sig_xcorrs('T', 'talker', T, T_w$p)) %>%
-  rbind(get_sig_xcorrs('M', 'meaning', M, M_w$p)) %>%
-  rbind(get_sig_xcorrs('N', 'meaning', N, N_w$p)) %>%
-  rbind(get_sig_xcorrs('L', 'constraint', L, L_w$p)) %>%
-  rbind(get_sig_xcorrs('H', 'constraint', H, H_w$p))
-
-p <- ggplot(df, aes(x = cond, y = xcorrs, fill = group)) + 
-  geom_boxplot()
-  # geom_boxplot(stat="identity", position=position_dodge()) +
-  # geom_errorbar(aes(ymin=xcorr-sd, ymax=xcorr+sd), width=.2,
-                 # position=position_dodge(.9)) +
-  # geom_signif(comparisons = list(c("S", "T")), annotations = '***') +
-  # ylab("xcorr") +
-  # scale_fill_brewer(palette="Blues")
-p
-ggsave(p, filename = '4_test_cross_correlations/figs/xcorrs_for_sig_channels.png', width = 6, height = 3.5)
-```
-
-
-```{r}
-# ANOVA between levels 
-
-# df <- get_sig_xcorrs('S', S, S_w$p) %>%
-#   rbind(get_sig_xcorrs('T', T, T_w$p)) %>%
-#   rbind(get_sig_xcorrs('M', M, M_w$p)) %>%
-#   rbind(get_sig_xcorrs('N', N, N_w$p)) %>%
-#   rbind(get_sig_xcorrs('L', L, L_w$p)) %>%
-#   rbind(get_sig_xcorrs('H', H, H_w$p))
-
-one.way <- aov(xcorrs ~ cond, data = df)
-TukeyHSD(one.way)
-
-# ANOVA between conditions
-
-df <- get_sig_xcorrs('talker', S, S_w$p) %>%        
-  rbind(get_sig_xcorrs('talker', T, T_w$p)) %>%
-  rbind(get_sig_xcorrs('meaning', M, M_w$p)) %>%
-  rbind(get_sig_xcorrs('meaning', N, N_w$p)) %>%
-  rbind(get_sig_xcorrs('constraint', L, L_w$p)) %>%
-  rbind(get_sig_xcorrs('constraint', H, H_w$p))
-
-one.way <- aov(xcorrs ~ cond, data = df)
-TukeyHSD(one.way)
-```
-
-
